<resources>
    <string name="app_name">Полочка</string>
    <string name="welcome_title">Полочка</string>
    <string name="welcome_subtitle">Храни важное рядом</string>
    <string name="action_login">Войти</string>
    <string name="action_register">Создать аккаунт</string>
    <string name="action_register_vk">Регистрация с [вк]</string>
    <string name="action_register_google">Регистрация с [гугл]</string>
    <string name="action_sent">Отправить</string>
    <string name="action_back_to_reg">Назад ко входу</string>
    <string name="login_title">Войти в аккаунт</string>
    <string name="register_title">Создать аккаунт</string>
    <string name="recover_title">Восстановление доступа</string>
    <string name="hint_email">Email</string>
    <string name="hint_password">Пароль</string>
    <string name="hint_name">Имя</string>
    <string name="hint_repeat_password">Повторите пароль</string>
    <string name="password_rule">Пароль должен содержать: минимум 6 символов, заглавные и сточные буквы, цифры и специальные символы</string>
    <string name="recovery_tule">Введите email, и мы отправим ссылку для восстановления пароля</string>
    <string name="action_forgot_password">Забыли пароль?</string>
    <string name="text_or">или</string>
    <string name="action_login_google">Войти с Google</string>
    <string name="action_login_vk">Войти с VK</string>
    <string name="dialog_login_qw">Нет аккаунта? </string>
    <string name="dialog_login_ans">Зарегистрироваться</string>
    <string name="auth_has_account">Уже есть аккаунт?</string>
    <string name="auth_go_login">Войти</string>
    <string name="auth_error_enter_name">Введите имя</string>
    <string name="auth_error_enter_email">Введите email</string>
    <string name="auth_error_enter_password">Введите пароль</string>
    <string name="auth_error_passwords_do_not_match">Пароли не совпадают</string>
    <string name="auth_google_login_soon">Вход через Google добавим позже</string>
    <string name="auth_vk_login_soon">Вход через VK добавим позже</string>
    <string name="auth_google_registration_soon">Регистрацию через Google добавим позже</string>
    <string name="auth_vk_registration_soon">Регистрацию через VK добавим позже</string>
    <string name="auth_password_recovery_soon">Ссылка для восстановления будет отправлена на email</string>
    <string name="auth_error_empty_response">Сервер вернул пустой ответ</string>
    <string name="auth_error_check_data">Проверьте введенные данные</string>
    <string name="auth_error_invalid_credentials">Неверный email или пароль</string>
    <string name="auth_error_user_exists">Пользователь уже существует</string>
    <string name="auth_error_server_request_failed">Не удалось выполнить запрос</string>
    <string name="auth_error_session_expired">Сессия истекла</string>
    <string name="auth_error_request_failed">Не удалось выполнить вход</string>
    <string name="registration_success_title">АККАУНТ СОЗДАН</string>
    <string name="registration_success_subtitle">Теперь настроим Полочку под вас</string>
    <string name="registration_success_description">Вы сможете выбрать предпочтения, продукты и настроить семью. Это поможет приложению давать более точные рекомендации.</string>
    <string name="action_start_setup">Начать настройку</string>
    <string name="action_next">Далее</string>
    <string name="action_skip">Пропустить</string>
    <string name="onboarding_subtitle">*Вы можете добавить это позже в настройках аккаунта</string>
    <string name="onboarding_categories_title">
        Выберите подходящие вам категории
    </string>
    <string name="onboarding_liked_title">
        Выберите продукты, которые вы любите
    </string>
    <string name="onboarding_disliked_title">
        Выберите продукты, которые вы <font color="#93A2E6">не любите</font>
    </string>
    <string name="onboarding_family_title">
        Добавьте членов семьи
    </string>
    <string name="onboarding_family_subtitle">
        Вы можете пригласить близких и вести список продуктов вместе
    </string>
    <string name="pref_gluten_free">без глютена</string>
    <string name="pref_lactose_free">без лактозы</string>
    <string name="pref_vegan">веганское</string>
    <string name="pref_vegetarian">вегетарианское</string>
    <string name="pref_protein">белковое</string>
    <string name="pref_diet">диетическое</string>
    <string name="pref_fatty">жирное</string>
    <string name="pref_spicy">неострое</string>
    <string name="pref_sugar_free">без сахара</string>
    <string name="pref_halal">халяль</string>
    <string name="pref_milk">молочное</string>
    <string name="pref_sour_milk">кисломолочное</string>
    <string name="pref_cheese">сыры</string>
    <string name="pref_meat">мясо</string>
    <string name="pref_fish">рыба</string>
    <string name="pref_poultry">птица</string>
    <string name="pref_seafood">морепродукты</string>
    <string name="pref_sausage">колбасное</string>
    <string name="pref_vegetables">овощи</string>
    <string name="pref_fruits">фрукты</string>
    <string name="pref_greens">зелень</string>
    <string name="pref_berries">ягоды</string>
    <string name="pref_mushrooms">грибы</string>
    <string name="pref_bakery">выпечка</string>
    <string name="pref_pasta">макароны</string>
    <string name="pref_grains">крупы</string>
    <string name="pref_coffee">кофе</string>
    <string name="pref_tea">чай</string>
    <string name="pref_sweet">сладкое</string>
    <string name="pref_salty">солёное</string>
    <string name="pref_hot">острое</string>
    <string name="onboarding_invite">Пригласить участников</string>
    <string name="default_user_name">Вася Пупкин</string>
    <string name="action_done">Готово</string>
    <string name="content_description_profile_photo">Фото профиля</string>
    <string name="toast_invite_family_soon">Приглашение семьи добавим позже</string>
    <string name="toast_onboarding_saved">Настройки сохранены</string>
    <string name="toast_onboarding_skipped">Настройка пропущена</string>
    <string name="error_empty_name">Введите имя</string>
    <string name="hint_email_new_member">Почта нового участника</string>
    <string name="content_description_confirm">Подтвердить приглашение</string>
    <string name="menu_storage">Запасы</string>
    <string name="menu_shopping">Покупки</string>
    <string name="menu_home">Главная</string>
    <string name="menu_recipes">Рецепты</string>
    <string name="menu_profile">Профиль</string>
    <string name="storage_title">Ваши продукты</string>
    <string name="storage_search_hint">Что вы хотите найти?</string>
    <string name="content_description_filter">Фильтр</string>
    <string name="content_description_close">Закрыть</string>
    <string name="content_description_add_product">Добавить продукт</string>
    <string name="storage_add_product_soon">скоро тут будет функция добавления</string>
    <string name="storage_filter_soon">Показаны продукты, которые скоро испортятся</string>
    <string name="storage_filter_all">Показаны все продукты</string>
    <string name="storage_filter_all_button">Показать все</string>
    <string name="storage_filter_soon_button">Скоро испортятся</string>
    <string name="storage_empty_filtered_title">Ничего не нашлось</string>
    <string name="storage_empty_filtered_subtitle">Попробуйте другой запрос или выключите фильтр</string>
    <string name="storage_life_long">срок не указан</string>
    <string name="storage_expired_label">ИСПОРЧЕНО</string>
    <string name="storage_write_off_selected">Списать выбранное</string>
    <string name="storage_selected_count">Выбрано: %1$d</string>
    <string name="storage_written_off">Списано продуктов: %1$d</string>
    <string name="storage_event_used">used</string>
    <string name="storage_select_all">Выбрать все</string>
    <string name="storage_clear_selection">Снять выбор</string>
    <string name="storage_write_off_progress">%1$d из %2$d</string>
    <string name="storage_write_off_title">Что случилось с продуктом?</string>
    <string name="storage_write_off_spoiled">Испортилось</string>
    <string name="storage_write_off_eaten">Съели</string>
    <string name="storage_write_off_custom">Своя причина</string>
    <string name="storage_write_off_all_spoiled">Все испортилось</string>
    <string name="storage_write_off_all_eaten">Все съели</string>
    <string name="storage_custom_reason_title">Своя причина</string>
    <string name="storage_custom_reason_hint">Например: отдали, потерялось</string>
    <string name="storage_custom_reason_save">Сохранить</string>
    <string name="storage_empty_title">Полочка пустая :(</string>
    <string name="storage_empty_subtitle">Если хотите добавить продукт, нажмите на плюсик</string>
    <string name="hint_product_name">Название</string>
    <string name="hint_product_category">Категория (опционально)</string>
    <string name="hint_product_expiration">Срок годности</string>
    <string name="storage_dialog_save">Сохранить!</string>
    <string name="analytics_title">Статистика</string>
    <string name="analytics_month">Месяц: %1$s</string>
    <string name="analytics_month_previous">‹</string>
    <string name="analytics_month_next">›</string>
    <string name="analytics_bought_label">БЫЛО КУПЛЕНО:</string>
    <string name="analytics_bought_value_default">0 продуктов</string>
    <string name="analytics_saved_money_label">ВЫ СЭКОНОМИЛИ:</string>
    <string name="analytics_saved_money_default">0 руб.</string>
    <string name="analytics_saved_note">*на основе спасенных продуктов</string>
    <string name="analytics_mode_percent">%</string>
    <string name="analytics_mode_count">шт.</string>
    <string name="analytics_used">использовано</string>
    <string name="analytics_empty_chart">пока нет данных</string>
    <string name="analytics_milk">Молоко</string>
    <string name="analytics_often_bought">чаще всего\nпокупали</string>
    <string name="analytics_spicy">Острое</string>
    <string name="analytics_favorite_category">ваша любимая\nкатегория</string>
    <string name="analytics_family_favorite_category">любимая\nкатегория семьи</string>
    <string name="analytics_often_spoiled">чаще всего\nпортилось</string>
    <string name="analytics_champion_name_default">Папа</string>
    <string name="analytics_champion_description">чемпион по покупкам в вашей семье</string>
    <string name="profile_logout">Выйти</string>
    <string name="profile_help_section_title">Помощь</string>
    <string name="profile_info">Инструкция</string>
    <string name="profile_user_agreement">Пользовательское соглашение</string>
    <string name="profile_privacy_policy">Политика приложения</string>
    <string name="profile_feedback">Написать отзыв</string>
    <string name="profile_help">Помощь и связь с разработчиком</string>
    <string name="profile_deactivate">Деактивировать аккаунт</string>
    <string name="profile_info_stub">Инструкция появится здесь позже</string>
    <string name="profile_user_agreement_stub">Пользовательское соглашение добавим позже</string>
    <string name="profile_privacy_policy_stub">Политику приложения добавим позже</string>
    <string name="profile_feedback_stub">Форма отзыва появится позже</string>
    <string name="profile_help_stub">Контакты для помощи добавим позже</string>
    <string name="profile_deactivate_title">Деактивация аккаунта</string>
    <string name="profile_deactivate_message">Вы точно хотите безвозвратно деактивировать аккаунт? Это действие нельзя будет отменить.</string>
    <string name="profile_deactivate_confirm">Да, деактивировать</string>
    <string name="recipe_rate">ОЦЕНИТЕ РЕЦЕПТ</string>
    <string name="comment">Комментарий</string>
    <string name="content_description_bad_rating">Плохая оценка</string>
    <string name="content_description_neutral_rating">Нейтральная оценка</string>
    <string name="content_description_good_rating">Хорошая оценка</string>
</resources>