<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/ratingRoot"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:gravity="center_horizontal">

    <TextView
        android:id="@+id/ratingTitleTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/recipe_rate"
        android:textColor="@color/button_primary"
        android:textSize="18sp" />

    <LinearLayout
        android:id="@+id/ratingButtonsContainer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/badRatingButton"
            style="@style/RecipeRatingButton"
            android:src="@drawable/ic_rating_bad"
            android:contentDescription="@string/content_description_bad_rating" />

        <ImageView
            android:id="@+id/neutralRatingButton"
            style="@style/RecipeRatingButton"
            android:src="@drawable/ic_rating_neutral"
            android:contentDescription="@string/content_description_neutral_rating" />

        <ImageView
            android:id="@+id/goodRatingButton"
            style="@style/RecipeRatingButton"
            android:src="@drawable/ic_rating_good"
            android:contentDescription="@string/content_description_good_rating" />

    </LinearLayout>

    <EditText
        android:id="@+id/ratingCommentEditText"
        android:layout_width="280dp"
        android:layout_height="40dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/shape_recipe_comment_field"
        android:hint="@string/comment"
        android:paddingHorizontal="16dp"
        android:textColor="@color/text_primary"
        android:textColorHint="@color/field_texthint"
        android:textSize="14sp" />

</LinearLayout>