<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_primary"
    android:clipToPadding="false"
    android:paddingBottom="120dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingHorizontal="@dimen/spacing_screen_horizontal"
        android:paddingTop="64dp">

        <TextView
            android:id="@+id/titleTextView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/analytics_title"
            android:textColor="@color/text_primary"
            android:textSize="36sp"
            android:textStyle="bold"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

        <TextView
            android:id="@+id/monthTextView"
            android:layout_width="wrap_content"
            android:layout_height="28dp"
            android:layout_marginTop="8dp"
            android:background="@drawable/shape_button_primary"
            android:gravity="center"
            android:paddingStart="18dp"
            android:paddingEnd="18dp"
            android:text="@string/analytics_month"
            android:textColor="@color/background_primary"
            android:textSize="20sp"
            app:layout_constraintTop_toBottomOf="@id/titleTextView"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/boughtLabelTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/analytics_bought_label"
            android:textAllCaps="true"
            android:textColor="@color/text_primary"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintTop_toBottomOf="@id/monthTextView"
            app:layout_constraintStart_toStartOf="parent"/>

        <TextView
            android:id="@+id/boughtValueTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:text="@string/analytics_bought_value_default"
            android:textColor="@color/text_primary"
            android:textSize="20sp"
            app:layout_constraintBaseline_toBaselineOf="@id/boughtLabelTextView"
            app:layout_constraintStart_toEndOf="@id/boughtLabelTextView"/>

        <FrameLayout
            android:id="@+id/chartContainer"
            android:layout_width="0dp"
            android:layout_height="260dp"
            android:layout_marginTop="15dp"
            app:layout_constraintTop_toBottomOf="@id/boughtValueTextView"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent">

            <View
                android:layout_width="260dp"
                android:layout_height="260dp"
                android:layout_gravity="center"
                android:background="@drawable/bg_analytics_chart_placeholder" />

            <LinearLayout
                android:id="@+id/chartModeContainer"
                android:layout_width="52dp"
                android:layout_height="wrap_content"
                android:layout_gravity="top|end"
                android:layout_marginTop="8dp"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/percentModeButton"
                    android:layout_width="match_parent"
                    android:layout_height="20dp"
                    android:background="@drawable/selector_analytics_mode_button"
                    android:gravity="center"
                    android:text="@string/analytics_mode_percent"
                    android:textColor="@color/background_primary"
                    android:textSize="16sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/countModeButton"
                    android:layout_width="match_parent"
                    android:layout_height="20dp"
                    android:layout_marginTop="10dp"
                    android:background="@drawable/selector_analytics_mode_button"
                    android:gravity="center"
                    android:text="@string/analytics_mode_count"
                    android:textColor="@color/button_primary"
                    android:textSize="14sp"
                    android:textStyle="bold" />

            </LinearLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="center"
                android:text="@string/analytics_used"
                android:textColor="@color/text_primary"
                android:textSize="24sp"
                android:textStyle="bold" />



        </FrameLayout>

        <TextView
            android:id="@+id/savedMoneyLabelTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/analytics_saved_money_label"
            android:textAllCaps="true"
            android:textColor="@color/text_primary"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintTop_toBottomOf="@id/chartContainer"
            app:layout_constraintStart_toStartOf="parent"/>

        <TextView
            android:id="@+id/savedMoneyValueTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="6dp"
            android:text="@string/analytics_saved_money_default"
            android:textColor="@color/text_primary"
            android:textSize="20sp"
            app:layout_constraintBaseline_toBaselineOf="@id/savedMoneyLabelTextView"
            app:layout_constraintStart_toEndOf="@id/savedMoneyLabelTextView"/>

        <TextView
            android:id="@+id/savedNoteTextView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/analytics_saved_note"
            android:textColor="@color/text_primary"
            android:textSize="12sp"
            app:layout_constraintTop_toBottomOf="@id/savedMoneyValueTextView"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

        <View
            android:id="@+id/divider"
            android:layout_width="0dp"
            android:layout_height="3dp"
            android:layout_marginTop="20dp"
            android:background="@drawable/bg_dashed_line"
            app:layout_constraintTop_toBottomOf="@id/savedNoteTextView"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

        <include
            android:id="@+id/analyticsInsights"
            layout="@layout/view_analytics_insights"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="28dp"
            app:layout_constraintTop_toBottomOf="@id/divider"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:paddingBottom="120dp"
            android:clipToPadding="false"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>